[TL] Updates with most recent event info

--- a/_posts/2016-03-05-March-2016-Concert.md
+++ b/_posts/2016-03-05-March-2016-Concert.md
@@ -2,7 +2,7 @@
 layout: post
 title: Our next members' concert on 14 March
 ---
-### Programme Notes ###
+### Programme Notes 
 Our next concert is on March 14th and features wind, strings and piano from Baroque to contemporary. Please note also that the April concert will be on Monday 11th, and will be organised by Andrew Lewandowski, let him know in good time if you expect to have something to offer.
  
 We begin with the J.S. Bach Sonata for Flute and Harpsichord in G Minor, BWV 1020 played by Theresa C. and David S. (on the piano). There are 3 movements: Allegro, Adagio, Allegro. The date of composition is not known, in fact the earliest (18th century) copies of the work attribute it either to C.P.E. Bach or to the Bach family generally, and according to some sources it began life as a violin sonata. Only in the 19th century was it thought to be by J.S. Bach, and since then there has been a continuous debate, which seems mostly to have come down on the side of the son. (Anyone wishing to follow this up can find it in merciless detail in the “Bach Cantatas” website.)  But either way it is an elegant piece of late-Baroque chamber music.  The opening movement is built of vintage allegro stock. The entirety of the opening ritornello is given to the harpsichord as a solo; when the flute enters some bars later the music briefly takes on a more spacious form -- but soon the energetic ritornello creeps back in. The flute sings a melody that grows from many long-held tones in the Adagio second movement. The third movement is a strong-boned Allegro into which from time to time breaks a wonderfully peculiar repeated-note motif.
