--- a/_posts/2016-04-05-April-2016-Concert.md
+++ b/_posts/2016-04-05-April-2016-Concert.md
@@ -2,7 +2,7 @@
 layout: post
 title: Our next members' concert on 11 April 
 ---
-### General ###
+### General 
 If you're a member, you should have received the updated Member list in this month's email.
  
 Our next concert is on Monday 11th April and it’s a bumper issue which we hope will attract a good audience of members. Before I get on with programme notes, I will give you the further notices now.
